crates/biome_yaml_formatter/tests/specs/prettier/yaml/spec/spec-example-2-8-play-by-play-feed-from-a-game.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/spec/spec-example-2-8-play-by-play-feed-from-a-game.yml
---

# Input

```yml
---
time: 20:03:20
player: Sammy Sosa
action: strike (miss)
...
---
time: 20:03:47
player: Sammy Sosa
action: grand slam
...

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
spec-example-2-8-play-by-play-feed-from-a-game.yml:5:4 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token.
  
     3 │ player: Sammy Sosa
     4 │ action: strike (miss)
   > 5 │ ...---
       │    ^^^
   > 6 │ time: 20:03:47
   > 7 │ player: Sammy Sosa
   > 8 │ action: grand slam
   > 9 │ ...
       │ ^^^
    10 │ 
  

```
